# pym4

./: .gitignore  LICENSE  README.md  m4.py  runtests.py  runtests.sh  setup.cfg  simpleconfigure.sh
m4/: __init__.py  __main__.py
test/: changequote.in  changequote.out  changequote_doublequote.in  changequote_doublequote.out  comment.in  comment.out  define.in  define.out  divert.in  divert.out  dnl.in  dnl.out  nested_quotes.in  nested_quotes.out  quote.in  quote.out
