[metadata]
name = parse-m4
description = Parser for M4
long_description = file:README.md
version = attr:m4.__version__
maintainer = Jelmer Vernooij
maintainer_email = jelmer@jelmer.uk
license = Apachev2 or later
url = https://github.cm/jelmer/m4
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: POSIX

[options]
packages = find:
python_requires = >=3.8

[flake8]
ignore = W504,E203,W503

[mypy]
ignore_missing_imports = True

[bdist_wheel]
universal = 1
